Fix iframe, wrap content around btm of sidebar

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
 }
+
 .main-document-header-container > #main-header-right {
     display: flex;
     gap: 1rem;
@@ -56,7 +57,7 @@ div.article-actions-container > .btn {
   
 }
 #main-content {
-    width: 75%;
+    width: 90%;
 }
 #main-content > h2 {
     text-align: center;
@@ -65,6 +66,7 @@ div.article-actions-container > .btn {
     text-align: center;
 }
 #main-content > iframe {
+    margin-left: .25%;
     width: 100%;
     height: 100vh
 }
@@ -83,6 +85,13 @@ div.article-actions-container > .btn {
         font-size: 75%;
         width: 125px;
         overflow-x: scroll;
+        float: left;
     }
-    
+    #main-content > iframe {
+        /* Try To have content in iframe wrap around the bottom 
+        of the side bar */
+        /* position: absolute; */
+        margin-left: 0rem;
+        
+    }
 }
