--- a/css/topic.css
+++ b/css/topic.css
@@ -6,30 +6,58 @@ body {
     margin: .5%;
 }
 body > main > p {
-    margin: .5% 0 .75% 0;
+    margin: .5% 0 1% 0;
 }
 .flex-container {
     display: flex;
     flex-wrap: wrap;
     flex: 0 1 49%;
-    gap: 1%;
+    /* gap: .5%; */
 }
-.flex-item {
-    /* width: 50%; */
-    border: 1px solid black;
+.flex-container > div {    
+    margin-bottom: 1.5%;
 }
+.txt {
+    /* display: flex; */
+    padding: 1%;
+    flex-direction: column;
+    justify-content: center;
+
+}
+.txt > p {
+    margin-bottom: 2.5%;
+}
+.txt  p > ul {
+    margin: 1% 0;
+}
+.txt ul > li {
+    margin-bottom: 1%;
+}
+.txt ul > li > ul {
+    margin: 1% 0;
+}
+.txt ul > li > ul > li{
+    list-style-type: square;
+}
+.txt > a > img{
+    margin-top: 1.25%;
+    width: 40%;
+    min-width: 400px; 
+    max-width: 550px;
+}
+/* Images */
 .flex-container > .image{
     width: 100%;
     min-width: 400px; 
     max-width: 550px;
-    /* margin: 1% 0 1% 0; */
 }
-.flex-container > .flex-item.image > a > img {
+
+.flex-container > .image > a > img {
     width: 100%;
     min-width: 400px; 
     max-width: 550px;
-    /* margin: 1% 0 1% 0; */
 }
+
 
 @media screen and (max-width:1300px) {
     .flex-container > .flex-item.image {
